--- a/小程序自定义弹窗/pages/index2/index2.wxml
+++ b/小程序自定义弹窗/pages/index2/index2.wxml
@@ -1,5 +1,7 @@
-<!--pages/index/index.wxml-->
-<!--index.wxml-->
+<!--pages/index2/index2.wxml-->
+
+<view bindtap="btn" class="btn">弹窗</view>
+
 <!-- 遮罩层 -->
 <view class="mask" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
 <!-- 弹出层 -->
@@ -11,7 +13,7 @@
       <text class="txt2">· 获得你的公开信息（昵称、头像等）</text>
     </view>
     <view class="authorize_btn">
-      <button class='authorize' type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">授权登录</button>
+      <button class='authorize' type='primary' open-type="getUserInfo" lang="zh_CN" bindtap="bindGetUserInfo">授权登录</button>
     </view>
   </view>
 </view>
