--- a/小程序自定义弹窗/pages/index2/index2.wxss
+++ b/小程序自定义弹窗/pages/index2/index2.wxss
@@ -1,6 +1,19 @@
-/* pages/index/index.wxss */
-/**index.wxss**/
+/* pages/index2/index2.wxss */
+
+.btn {
+  width: 80px;
+  height: 35px;
+  background: #44b549;
+  line-height: 35px;
+  text-align: center;
+  color: #fff;
+  font-size: 15px;
+  margin: 20px auto;
+  border-radius: 100px;
+}
+
 /* 遮罩层 */
+
 .mask {
   width: 100%;
   height: 100%;
@@ -13,6 +26,7 @@
 }
 
 /* 弹出层 */
+
 .modal {
   width: 80%;
   position: fixed;
