--- a/小程序菜单showActionSheet和选择器picker组合/pages/mature/mature.wxml
+++ b/小程序菜单showActionSheet和选择器picker组合/pages/mature/mature.wxml
@@ -1,2 +1,2 @@
 <!--pages/mature/mature.wxml-->
-<text>pages/mature/mature.wxml</text>
+<button bindtap='showActionSheet'>showActionSheet菜单</button>
