--- a/小程序菜单showActionSheet和选择器picker组合/pages/mature/mature.wxml
+++ b/小程序菜单showActionSheet和选择器picker组合/pages/mature/mature.wxml
@@ -1,2 +1,5 @@
 <!--pages/mature/mature.wxml-->
 <button bindtap='showActionSheet'>showActionSheet菜单</button>
+
+<my-picker range="{{val}}" bindfinish="finishHandler" pickerShow="{{pickerShow}}" is-shadow="{{true}}">
+</my-picker>
