--- a/小程序选项卡吸附顶部/pages/index/index.wxml
+++ b/小程序选项卡吸附顶部/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--导航条-->
-<scroll-view scroll-y="true" bindscrolltolower="bindDownLoad">
+<!-- <scroll-view scroll-y="true" bindscrolltolower="bindDownLoad"> -->
   <view id='topview'>
     <text>功能需求:</text>
     <text>1、选项卡切换（跳转时无滑动效果）</text>
@@ -34,4 +34,4 @@
   <view hidden="{{currentTab!==2}}">
     tab_03
   </view>
-</scroll-view>
+<!-- </scroll-view> -->
